Fix for main content visible when empty on mobile

--- a/src/components/bs5/header/header.scss
+++ b/src/components/bs5/header/header.scss
@@ -295,7 +295,7 @@
     font-variant-numeric: lining-nums;
     text-decoration: none;
 
-    &:hover {
+    a:hover {
       color: var(--#{$prefix}header__brand__anchor__hover_text_color);
 
       .qld-header-brand-image {
@@ -315,8 +315,7 @@
     }
 
     @include media-breakpoint-up(lg) {
-      display: inline-flex;
-      align-items: center;
+      padding-block: 1.5rem;
     }
   }
 
@@ -326,14 +325,6 @@
 
     @include media-breakpoint-up(lg) {
       display: block;
-    }
-
-    &.is-subtype {
-      border-right: 2px solid
-        var(--#{$prefix}header__brand-image__subtype__border_color);
-      color: var(--#{$prefix}header__brand-image__subtype__text_color);
-      margin-right: 1.5rem;
-      padding-right: 1.5rem;
     }
 
     img {
@@ -346,16 +337,26 @@
     }
   }
 
-  &-site-name {
+  &-secondary-content {
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
     text-wrap: balance;
+    padding-block: 1rem;
+
+    @include media-breakpoint-up(md) {
+      padding-block: 1.5rem;
+    }
 
     @include media-breakpoint-up(lg) {
+      padding-block: 0;
       flex-direction: column;
       flex-wrap: nowrap;
       justify-content: center;
+      border-left: 2px solid
+        var(--#{$prefix}header__brand-image__subtype__border_color);
+      margin-left: 1.5rem;
+      padding-left: 1.5rem;
     }
   }
 
@@ -367,7 +368,7 @@
     }
   }
 
-  &-heading {
+  &-site-title {
     font-size: 1rem;
     font-weight: 700;
     line-height: 1.25;
@@ -391,13 +392,6 @@
     @include media-breakpoint-up(md) {
       font-size: 1rem;
       line-height: 1.25;
-    }
-  }
-
-  //Reduce size of whitebar on masterbrand
-  &.is-masterbrand {
-    @include media-breakpoint-down(lg) {
-      height: 0;
     }
   }
 
